--- a/css/style2.css
+++ b/css/style2.css
@@ -352,14 +352,14 @@ body{
 }
 
 .button-85 {
-    /* padding: 0.2em 2em; */
-    margin-top: 10px;
+    padding: 2em 2em;
+    margin-bottom: 38%;
     border: none;
     outline: none;
     color: rgb(255, 255, 255);
     background: #111;
     cursor: pointer;
-    position: relative;
+    position: absolute;
     z-index: 0;
     border-radius: 10px;
     user-select: none;
