--- a/css/style2.css
+++ b/css/style2.css
@@ -359,7 +359,7 @@ body{
     color: rgb(255, 255, 255);
     background: #111;
     cursor: pointer;
-    position: relative;
+    position: absolute;
     z-index: 0;
     border-radius: 10px;
     user-select: none;
